# caffemnist

./: CMakeLists.txt  README.md  main.cpp
models/: lenet_iter_10000.caffemodel
